{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 74,
  "lineage": "3e0ef7ef-1c8c-2bdb-3202-89fe85da5bf7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:404692824390:instance/i-0889260198543b167",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0889260198543b167",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04ba247317518398d"
              }
            ],
            "primary_network_interface_id": "eni-04ba247317518398d",
            "private_dns": "ip-10-0-1-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.150",
            "public_dns": "ec2-98-93-151-123.compute-1.amazonaws.com",
            "public_ip": "98.93.151.123",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:404692824390:key/a1909c72-e1f6-4ce4-9d43-44a67f204b94",
                "throughput": 125,
                "volume_id": "vol-004543edc1a70632e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a11b3cf155187b9",
            "tags": {
              "Name": "Shivansh-Chaurasia-web"
            },
            "tags_all": {
              "Name": "Shivansh-Chaurasia-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a4c923c9daba78ee"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404692824390",
            "id": "i-0889260198543b167",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_ami.al2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:internet-gateway/igw-0caff31a202644091",
            "id": "igw-0caff31a202644091",
            "owner_id": "404692824390",
            "region": "us-east-1",
            "tags": {
              "Name": "Shivansh-Chaurasia-igw"
            },
            "tags_all": {
              "Name": "Shivansh-Chaurasia-igw"
            },
            "vpc_id": "vpc-049d391579bb0fd86"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:route-table/rtb-079058c8b790551cd",
            "id": "rtb-079058c8b790551cd",
            "owner_id": "404692824390",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0caff31a202644091",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Shivansh-Chaurasia-public-rt"
            },
            "tags_all": {
              "Name": "Shivansh-Chaurasia-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049d391579bb0fd86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404692824390",
            "id": "rtb-079058c8b790551cd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061450b14b131ff17",
            "region": "us-east-1",
            "route_table_id": "rtb-079058c8b790551cd",
            "subnet_id": "subnet-00a11b3cf155187b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:security-group/sg-0a4c923c9daba78ee",
            "description": "Allow HTTP and optional SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4c923c9daba78ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Shivansh-Chaurasia-sg",
            "name_prefix": "",
            "owner_id": "404692824390",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Shivansh-Chaurasia-sg"
            },
            "tags_all": {
              "Name": "Shivansh-Chaurasia-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-049d391579bb0fd86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404692824390",
            "id": "sg-0a4c923c9daba78ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:subnet/subnet-00a11b3cf155187b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a11b3cf155187b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "404692824390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Shivansh-Chaurasia-public-subnet"
            },
            "tags_all": {
              "Name": "Shivansh-Chaurasia-public-subnet"
            },
            "vpc_id": "vpc-049d391579bb0fd86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404692824390",
            "id": "subnet-00a11b3cf155187b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404692824390:vpc/vpc-049d391579bb0fd86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac3a3a6aeb4f0bde",
            "default_route_table_id": "rtb-04f46d65a8d753620",
            "default_security_group_id": "sg-0545710a7de96278d",
            "dhcp_options_id": "dopt-05a961a6181fd7ddb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049d391579bb0fd86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f46d65a8d753620",
            "owner_id": "404692824390",
            "region": "us-east-1",
            "tags": {
              "Name": "Shivansh-Chaurasia-vpc"
            },
            "tags_all": {
              "Name": "Shivansh-Chaurasia-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404692824390",
            "id": "vpc-049d391579bb0fd86",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}